--- a/rabbit-trap.css
+++ b/rabbit-trap.css
@@ -1,5 +1,3 @@
-/* Frank Poth 02/28/2018 */
-
 * { box-sizing:border-box; margin:0; padding:0; }
 
 html { height:100%; width:100%; }
@@ -13,12 +11,81 @@ body {
   justify-items:center;
   height:100%;
   width:100%;
+  position: relative;
 
 }
 
 /* 04/07/2018 */
+.splash_screen {
+  position: absolute;
+  white-space: pre-line;
+  left: 0vh;
+  right: 0vh;
+  top: 50%;
+  margin: 0 auto;
+  transform: translateY(-50%);
+  width: 250px;
+  animation-fill-mode: forwards;
+  animation: fadeOut ease 8s;
+  opacity: 0;
+  -webkit-animation: fadeOut ease 8s;
+  -moz-animation: fadeOut ease 8s;
+  -o-animation: fadeOut ease 8s;
+  -ms-animation: fadeOut ease 8s;
+  background-color: whitesmoke;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+  text-align: center;
+  border: 3px solid black;
+  display:block;
+}
 
-canvas { image-rendering:pixelated; }
+@keyframes fadeOut {
+  0% {
+    opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+
+@-moz-keyframes fadeOut {
+  0% {
+    opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+
+@-o-keyframes fadeOut {
+  0% {
+    opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+
+@-ms-keyframes fadeOut {
+  0% {
+    opacity:1;
+  }
+  100% {
+    opacity:0;
+  }
+}
+canvas { image-rendering:pixelated;}
 
 #menu {
 
